--- a/AISC_Team10/AISC_Team10_AI_Symptom_Checker/AISC_Team10_AI_Symptom_Checker.csproj
+++ b/AISC_Team10/AISC_Team10_AI_Symptom_Checker/AISC_Team10_AI_Symptom_Checker.csproj
@@ -49,6 +49,19 @@
     <Compile Include="DataProvider.cs" />
     <Compile Include="DoctorAccountDAO.cs" />
     <Compile Include="DoctorAccountDTO.cs" />
+    <Compile Include="ForgotPasswordDTO.cs" />
+    <Compile Include="frmAbout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAbout.Designer.cs">
+      <DependentUpon>frmAbout.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmForgotPassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmForgotPassword.Designer.cs">
+      <DependentUpon>frmForgotPassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +100,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelativeAccountDAO.cs" />
     <Compile Include="RelativeAccountDTO.cs" />
+    <Compile Include="usrCtrlAvatar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="usrCtrlAvatar.Designer.cs">
+      <DependentUpon>usrCtrlAvatar.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="frmAbout.resx">
+      <DependentUpon>frmAbout.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmForgotPassword.resx">
+      <DependentUpon>frmForgotPassword.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,7 +135,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="usrCtrlAvatar.resx">
+      <DependentUpon>usrCtrlAvatar.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -121,6 +150,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img_role_doctor.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\img_role_relative.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
