--- a/AISC_Team10/AISC_Team10_AI_Symptom_Checker/AISC_Team10_AI_Symptom_Checker.csproj
+++ b/AISC_Team10/AISC_Team10_AI_Symptom_Checker/AISC_Team10_AI_Symptom_Checker.csproj
@@ -44,11 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountCTL.cs" />
     <Compile Include="AccountDAO.cs" />
     <Compile Include="AccountDTO.cs" />
     <Compile Include="DataProvider.cs" />
     <Compile Include="DoctorAccountDAO.cs" />
     <Compile Include="DoctorAccountDTO.cs" />
+    <Compile Include="DoctorAccountCTL.cs" />
     <Compile Include="ForgotPasswordDTO.cs" />
     <Compile Include="frmAbout.cs">
       <SubType>Form</SubType>
@@ -94,12 +96,14 @@
     </Compile>
     <Compile Include="LoginBUS.cs" />
     <Compile Include="LoginInfo.cs" />
+    <Compile Include="PatientAccountCTL.cs" />
     <Compile Include="PatientAccountDAO.cs" />
     <Compile Include="PatientAccountDTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelativeAccountDAO.cs" />
     <Compile Include="RelativeAccountDTO.cs" />
+    <Compile Include="RelativeAccountCTL.cs" />
     <Compile Include="usrCtrlAvatar.cs">
       <SubType>UserControl</SubType>
     </Compile>
