--- a/AISC_Team10/AISC_Team10_AI_Symptom_Checker/AISC_Team10_AI_Symptom_Checker.csproj
+++ b/AISC_Team10/AISC_Team10_AI_Symptom_Checker/AISC_Team10_AI_Symptom_Checker.csproj
@@ -44,30 +44,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountCTL.cs" />
-    <Compile Include="AccountDAO.cs" />
-    <Compile Include="AccountDTO.cs" />
+    <Compile Include="Account\AccountCTL.cs" />
+    <Compile Include="Account\AccountDAO.cs" />
+    <Compile Include="Account\AccountDTO.cs" />
     <Compile Include="DataProvider.cs" />
-    <Compile Include="DoctorAccountDAO.cs" />
-    <Compile Include="DoctorAccountDTO.cs" />
-    <Compile Include="DoctorAccountCTL.cs" />
-    <Compile Include="ForgotPasswordDTO.cs" />
+    <Compile Include="Doctor\DoctorAccountDAO.cs" />
+    <Compile Include="Doctor\DoctorAccountDTO.cs" />
+    <Compile Include="Doctor\DoctorAccountCTL.cs" />
+    <Compile Include="InternetProvider.cs" />
+    <Compile Include="Login\ForgotPasswordDTO.cs" />
     <Compile Include="frmAbout.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmAbout.Designer.cs">
       <DependentUpon>frmAbout.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmForgotPassword.cs">
+    <Compile Include="Login\frmForgotPassword.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmForgotPassword.Designer.cs">
+    <Compile Include="Login\frmForgotPassword.Designer.cs">
       <DependentUpon>frmForgotPassword.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmLogin.cs">
+    <Compile Include="Login\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmLogin.Designer.cs">
+    <Compile Include="Login\frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="frmMainUser.cs">
@@ -76,59 +77,61 @@
     <Compile Include="frmMainUser.Designer.cs">
       <DependentUpon>frmMainUser.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmRegister.cs">
+    <Compile Include="Login\frmRegister.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmRegister.Designer.cs">
+    <Compile Include="Login\frmRegister.Designer.cs">
       <DependentUpon>frmRegister.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmRegisterationResult.cs">
+    <Compile Include="Login\frmRegisterationResult.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmRegisterationResult.Designer.cs">
+    <Compile Include="Login\frmRegisterationResult.Designer.cs">
       <DependentUpon>frmRegisterationResult.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmRegisterationRoleChoice.cs">
+    <Compile Include="Login\frmRegisterationRoleChoice.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmRegisterationRoleChoice.Designer.cs">
+    <Compile Include="Login\frmRegisterationRoleChoice.Designer.cs">
       <DependentUpon>frmRegisterationRoleChoice.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoginBUS.cs" />
-    <Compile Include="LoginInfo.cs" />
-    <Compile Include="PatientAccountCTL.cs" />
-    <Compile Include="PatientAccountDAO.cs" />
-    <Compile Include="PatientAccountDTO.cs" />
+    <Compile Include="Login\LoginBUS.cs" />
+    <Compile Include="Login\LoginInfo.cs" />
+    <Compile Include="mainUserBUS.cs" />
+    <Compile Include="mainUserDAO.cs" />
+    <Compile Include="Patient\PatientAccountCTL.cs" />
+    <Compile Include="Patient\PatientAccountDAO.cs" />
+    <Compile Include="Patient\PatientAccountDTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RelativeAccountDAO.cs" />
-    <Compile Include="RelativeAccountDTO.cs" />
-    <Compile Include="RelativeAccountCTL.cs" />
-    <Compile Include="usrCtrlAvatar.cs">
+    <Compile Include="Relative\RelativeAccountDAO.cs" />
+    <Compile Include="Relative\RelativeAccountDTO.cs" />
+    <Compile Include="Relative\RelativeAccountCTL.cs" />
+    <Compile Include="UserControl\usrCtrlAvatar.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="usrCtrlAvatar.Designer.cs">
+    <Compile Include="UserControl\usrCtrlAvatar.Designer.cs">
       <DependentUpon>usrCtrlAvatar.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="frmAbout.resx">
       <DependentUpon>frmAbout.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmForgotPassword.resx">
+    <EmbeddedResource Include="Login\frmForgotPassword.resx">
       <DependentUpon>frmForgotPassword.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmLogin.resx">
+    <EmbeddedResource Include="Login\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMainUser.resx">
       <DependentUpon>frmMainUser.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmRegister.resx">
+    <EmbeddedResource Include="Login\frmRegister.resx">
       <DependentUpon>frmRegister.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmRegisterationResult.resx">
+    <EmbeddedResource Include="Login\frmRegisterationResult.resx">
       <DependentUpon>frmRegisterationResult.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmRegisterationRoleChoice.resx">
+    <EmbeddedResource Include="Login\frmRegisterationRoleChoice.resx">
       <DependentUpon>frmRegisterationRoleChoice.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -141,7 +144,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="usrCtrlAvatar.resx">
+    <EmbeddedResource Include="UserControl\usrCtrlAvatar.resx">
       <DependentUpon>usrCtrlAvatar.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
