xong hoan chinh module thu nhan va luu tru nhip ti, cam xuc

--- a/AISC_Team10_Modules/AISC_Team10_Modules.csproj
+++ b/AISC_Team10_Modules/AISC_Team10_Modules.csproj
@@ -76,6 +76,7 @@
     <Compile Include="HeartRateDetection\HeartbeatDetectionBackground.cs" />
     <Compile Include="OutDataDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecognitionResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="EmotionDetection\EmotionDetectionForm.resx">
